<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/calcu_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/simple_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/menu_calcu_act" />

    <TextView
        android:id="@+id/calculator_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="end"
        android:padding="16dp"
        android:text="@string/calculator_zero"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="4"
        android:rowCount="5"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true">

        <Button
            android:id="@+id/btn_7"
            style="@style/Widget.Material3.Button"
            android:text="7" />

        <Button
            android:id="@+id/btn_8"
            style="@style/Widget.Material3.Button"
            android:text="8" />

        <Button
            android:id="@+id/btn_9"
            style="@style/Widget.Material3.Button"
            android:text="9" />

        <Button
            android:id="@+id/btn_divide"
            style="@style/Widget.Material3.Button"
            android:text="÷" />

        <Button
            android:id="@+id/btn_4"
            style="@style/Widget.Material3.Button"
            android:text="4" />

        <Button
            android:id="@+id/btn_5"
            style="@style/Widget.Material3.Button"
            android:text="5" />

        <Button
            android:id="@+id/btn_6"
            style="@style/Widget.Material3.Button"
            android:text="6" />

        <Button
            android:id="@+id/btn_multiply"
            style="@style/Widget.Material3.Button"
            android:text="×" />

        <Button
            android:id="@+id/btn_1"
            style="@style/Widget.Material3.Button"
            android:text="1" />

        <Button
            android:id="@+id/btn_2"
            style="@style/Widget.Material3.Button"
            android:text="2" />

        <Button
            android:id="@+id/btn_3"
            style="@style/Widget.Material3.Button"
            android:text="3" />

        <Button
            android:id="@+id/btn_subtract"
            style="@style/Widget.Material3.Button"
            android:text="-" />

        <Button
            android:id="@+id/btn_0"
            style="@style/Widget.Material3.Button"
            android:layout_columnSpan="2"
            android:text="0" />

        <Button
            android:id="@+id/btn_decimal"
            style="@style/Widget.Material3.Button"
            android:text="." />

        <Button
            android:id="@+id/btn_add"
            style="@style/Widget.Material3.Button"
            android:text="+" />

        <Button
            android:id="@+id/btn_clear"
            style="@style/Widget.Material3.Button"
            android:layout_columnSpan="2"
            android:text="@string/calculator_clear" />

        <Button
            android:id="@+id/btn_equals"
            style="@style/Widget.Material3.Button"
            android:layout_columnSpan="2"
            android:text="=" />

    </GridLayout>
</LinearLayout>
